--- a/automations.yaml
+++ b/automations.yaml
@@ -2435,7 +2435,7 @@
   - service: rest_command.matrix_text
     data:
       text: '{{states(''input_text.matrix_text'')[:28]}}'
-      fx: 122
+      segment: 1
   mode: single
 - id: '1675852669630'
   alias: Matrix - Default
@@ -2455,8 +2455,14 @@
       seconds: 0
   condition: []
   action:
-  - service: rest_command.matrix_default
-    data: {}
+  - service: rest_command.matrix_image
+    data:
+      segment: 0
+      image: 0,1,'000000',1,7,'3f67af',7,8,'000000',8,9,'3f67af',9,11,'000000',11,12,'950408',12,15,'000000',15,16,'3f67af',16,17,'365b9f',17,18,'000001',18,19,'370000',19,20,'990000',20,21,'350000',21,22,'000000',22,23,'000102',23,24,'365b9d',24,25,'365b9f',25,26,'000001',26,27,'2c0000',27,28,'850000',28,29,'4b0000',29,30,'0b0000',30,31,'000102',31,32,'375c9f',32,33,'365b9f',33,34,'000001',34,35,'0c0000',35,36,'470000',36,37,'770000',37,38,'3c0000',38,39,'070103',39,40,'375c9f',40,41,'365b9f',41,42,'000001',42,43,'000000',43,44,'0d0000',44,45,'440000',45,46,'9b0000',46,47,'290103',47,48,'375c9f',48,49,'365b9f',49,50,'000001',50,52,'000000',52,53,'070000',53,54,'240000',54,55,'0b0103',55,56,'375c9f',56,57,'0f192c',57,58,'3c65af',58,61,'3c67b2',61,62,'3d67b2',62,63,'3b64ae',63,64,'0f1a2d'
+  - service: rest_command.matrix_text
+    data:
+      segment: 1
+      text: ''
   mode: single
 - id: '1675874795995'
   alias: 'Matrix: Music artist'
@@ -2496,6 +2502,10 @@
             true) }}
 
             '
+  - service: rest_command.matrix_effect
+    data:
+      segment: 0
+      effect: 139
   mode: single
 - id: '1678450635245'
   alias: Notify when Kodi Media Centre is left on
