--- a/esphome/air-quality.yaml
+++ b/esphome/air-quality.yaml
@@ -18,6 +18,7 @@ ota:
 wifi:
   ssid: !secret wifi_iot_ssid
   password: !secret wifi_password
+  domain: ".lan"
   
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
