--- a/esphome/d1mini-motion-reuben.yaml
+++ b/esphome/d1mini-motion-reuben.yaml
@@ -6,7 +6,8 @@ esphome:
 wifi:
   ssid: !secret wifi_iot_ssid
   password: !secret wifi_password
-
+  domain: ".lan"
+  
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
     ssid: "D1Mini Motion Pir Hotspot"
