--- a/esphome/d1mini-motion-seb.yaml
+++ b/esphome/d1mini-motion-seb.yaml
@@ -6,14 +6,15 @@ esphome:
 wifi:
   ssid: !secret wifi_iot_ssid
   password: !secret wifi_password
-
+  domain: ".lan"
+  
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
     ssid: "${device_name}"
     password: !secret wifi_password
 
 substitutions:
-  device_name: "d1mini_motion_seb"
+  device_name: "d1mini-motion-seb"
   friendly_name: "Seb D1"
   
 captive_portal:
