Added: Sensors for Solax solar inverter local API Added: Live Energy dashboard

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -27,6 +27,7 @@ recorder: !include includes/recorder.yaml
 rest_command: !include includes/rest.yaml
 script: !include scripts.yaml
 sensor: !include includes/sensors.yaml
+template: !include includes/template.yaml
 utility_meter: !include includes/utility.yaml
 zone: !include includes/zones.yaml
 
