--- a/includes/sensors.yaml
+++ b/includes/sensors.yaml
@@ -418,3 +418,12 @@
   # 1 - Self Use Charge from grid (0 for disabled, 1 for enabled)
   # 2 - Self Use Charge from grid to % 
   value_template: "{{ '[' ~ value.split(',')[28] ~ ',' ~ value.split(',')[29] ~ ',' ~ value.split(',')[30] ~ ']' }}"
+  
+- platform: history_stats
+  name: airer_run_time
+  entity_id: switch.heated_airer
+  state: "on"
+  type: time
+  start: "{{ as_datetime(states('sensor.airer_requested_power')) }}"
+  end: "{{ now() }}"
+  
