--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,6 +1,6 @@
 # Configure a default setup of Home Assistant (frontend, api, etc)
 default_config:
-
+  
 frontend:
   themes: !include_dir_merge_named ./themes
   extra_module_url:
@@ -17,6 +17,7 @@ binary_sensor: !include includes/binary_sensors.yaml
 cover: !include includes/covers.yaml
 device_tracker: !include includes/device_trackers.yaml
 downloader: !include includes/downloader.yaml
+energy:
 google_assistant: !include includes/google_assistant.yaml
 group: !include includes/groups.yaml
 http: !include includes/http.yaml
